--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "@types/sequelize": "^4.28.20"
   }
 }
